# kasanova

./: .gitignore  ReadMe.md
sabotage-as-a-service/: Dockerfile  context.py  entrypoint.sh  initializer.py  main.py  requirements.txt  site_scraper.py  test.py  toxic2.py
sabotage-as-a-service/legacy/: counter_response_tool.py  embed_test.py  nova.py  toxic.py  website_scraper.py
sabotage-as-a-service/poetry_dir/: command_run.py  plugins.py  pyproject.toml
sabotage-as-a-service/poetry_dir/poem_generator/: counter_response_tool.py
the-trojan-retriever/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
the-trojan-retriever/src/app/: layout.tsx  page.tsx
the-trojan-retriever/src/app/api/stream/: route.ts
the-trojan-retriever/src/app/components/ui/: chat.tsx
